[gd_scene load_steps=3 format=3 uid="uid://b675wvrywcvl2"]

[ext_resource type="Theme" uid="uid://co5j6jbhgq51l" path="res://Themes/light.theme" id="1_n8bxj"]
[ext_resource type="Script" path="res://0Test/ModManagerInstaller/mod_manager_downloader.gd" id="2_3o8ql"]

[node name="ModManagerDownloader" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_n8bxj")
script = ExtResource("2_3o8ql")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Select which Mod Manager to Install:"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Button" type="Button" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mod Organizer 2
2.5.2"

[node name="Button2" type="Button" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Vortex
1.12.3"

[node name="Button3" type="Button" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Nexus Mods App
0.6.0"

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel"]
layout_mode = 2
offset_top = 367.0
offset_right = 720.0
offset_bottom = 400.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer3"]
layout_mode = 2
alignment = 1

[node name="Button4" type="Button" parent="Panel/VBoxContainer3/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 0

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="Panel/VBoxContainer/VBoxContainer2/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/VBoxContainer2/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/VBoxContainer2/HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer3/HBoxContainer/Button4" to="." method="_on_button_4_pressed"]
